--- a/invoke.yaml.template
+++ b/invoke.yaml.template
@@ -12,14 +12,14 @@ odoo_addons_directories:
   - env/community/addons
 
 custom_addons_directories:
-
+    - addons
 odoo_languages:
   - en_US
   - fr_BE
   - nl_BE
 
 
-database_name: test_{project}
+database_name: test_fdm
 odoo_lint_disable: rst-syntax-error,missing-readme,unnecessary-utf8-coding-comment
 test_log_level : test
 test_log_handlers : odoo.modules.loading:INFO,werkzeug:CRITICAL
